- Fixed bug #0000342 reported by James LiGate about tokens leaking through from clients
- Removed some IPv6 resolver specifics that seemed illogical (reference to Jollino's IPv6 crashes)
- Fixed crash bug in m_tkl_line found by Keeper
- Fixed another m_tkl_line bug found by Keeper
- Fixed an samode bug reported by mcskaf (#0000403)
- Added the ability to /lusers server.name to get the lusers reply of another server
  suggested by tony0man (#0000373)
- Fixed a bug where /htm would report "no such server" when used locally, reported by
  jollino (#0000343)
- Possibly fixed some crash bugs in scan_socks and scan_http in Win32 reported by
  UrLoverGuy13 and Xose (#0000389)
- Documentation - Updatet sec2.0 - list of Supported OS's for Win32 Version
- Documentation - Updated sec1.1 - Instructed to use bugs.unrealircd.org to report problems with docs
- Documentation - Updated misc hyperlinks - doc/unreal32docs.html
- Documentation - Updated sec3.31 - Added better description to the format we present set:: settings 
- Documentation - Updated sec3.31 - Added more details to set directives
- Documentation - Updated sec3.25 - Added option vhost::swhois to section 3.25 Vhost block
- Documentation - Replaced text vair {} with <> to prevent confusion.
- Documentation - Documented that lusers now supports remote servers
- Documentation - Corrected vhost::from example as reported by joolz (#0000329 )
- Documentation - Corrected set::scan:messages, currently listed as set::messages - as reported by joolz (#0000329) 
- Documentation - Added channel mode t & description as reported by stfcs (#0000315) 
- example.conf - Corrected incorrect set::services-services statment in alias block - reported by mcskaf (#0000401)
- Documentation - Corrected Spelling mistake in HTM mode - Reported by CoNfOuNd (#0000387)
- Documentation - Added coadmin to table of oper types - Reported by FrostByghte (#0000359)