@@ -9,12 +9,12 @@
 <div align="center"><strong><font size="7">UnrealIRCd</font></strong><br>
   <font size="4"><a href="http://www.unrealircd.com">http://www.unrealircd.com</a></font><br>
   <font size="4">Version: 3.2-Selene</font><br>
-  <strong>Complete Documentation</strong> &#8211; Rev: 1.1.2.9<br>
+  <strong>Complete Documentation</strong> &#8211; Rev: 1.1.2.10<br>
   <strong>Current Version:</strong> 3.2 Beta12<br>
   <strong>Released</strong>: 8/25/02 </div>
   <strong>Head Coders:</strong> Stskeeps / Codemastr<br>
   <strong>Coding Team</strong>: Grievre / Luke / nighthawk<br>
-  <strong>Documentation:</strong> CKnight^</p>
+  <strong>Documentation:</strong> CKnight^<br>
 <p>Due to the increasing complexity of UnrealIRCd3.2 We have switched to a easier 
   to navigate, more inclusive documentation set. To view this documentation you 
   must have a compatible browser, which are listed below. Up to date docs are 
@@ -87,8 +87,6 @@
   errors, please goto <a href="http://bugs.unrealircd.org">http://bugs.unrealircd.org</a> 
   and file a bug report, and I will be sure to get it corrected ASAP.</p>
 <p><strong>Email: </strong><a href="mailto://docs@unrealircd.com">docs@unrealircd.com</a></p>
-<p> </p>
-<p> </p>
 <p><font size="+2"><strong>1.2 &#8211; Notes on current release</strong><a name="notesoncurrentrelease" id="notesoncurrentrelease"></a></font><br>
 </p>
 <p> <font size="-1">I M P O R T A N T R E A D I N G</font></p>
@@ -249,8 +247,6 @@
 </p>
 <p>Unreal 3.2 is ONLY compatible with Unreal3.1.4 and Unreal3.2 servers. DO NOT 
   ATTEMPT to link to servers that it is NOT compatible with.</p>
-<p></p>
-<p></p>
 <p><font size="+2"><strong>2.0 - Installation</strong></font><a name="installation" id="installation"></a><br>
   <br>
   <strong>Tested &amp; Supported Operating Systems:</strong><br>
@@ -464,7 +460,6 @@
   form listen &lt;ip:port&gt;;. Valid listen::options are clientsonly (only users 
   may connect), serversonly (only servers nameconnect), java (CR javachat support), 
   ssl (SSL encrypted port). A combination of any of those flags may be specified.</p>
-<p> </p>
 <p>Since IPv6 is now supported, and the IPv6 seperator is a : it makes the<br>
   ip:port format a bit difficult. To compensate, you should enclose the IP in 
   brackets. For<br>
@@ -1802,7 +1797,7 @@
     <td>All</td>
   </tr>
   <tr> 
-    <td height="39">lusers &lt;server&gt </td>
+    <td height="39">lusers &lt;server&gt; </td>
     <td>Displays current &amp; max user loads, both global and local. Adding a server name allows you to view rules on other servers.<br></td>
     <td>All</td>
   </tr>
@@ -2281,8 +2276,5 @@
     <td>IRCop/All</td>
   </tr>
 </table>
-<p></p>
-<p></p>
-<p></p>
 </body>
 </html>
